[package]
name = "icky"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "^0.21.0"
clap = { version = "^4.2.x", features = ["derive"] }
freedesktop-icons = "^0.2.3"
gdk-pixbuf = "^0.17.10"
serde = { version = "^1.0.x", features = ["derive"] }
serde_json = "^1.0.x"
tokio = { version = "^1.28.x", features = ["full"] }
zbus = { version = "^3.14.x", default-features = false, features = ["tokio"] }
zbus_names = { version = "^2.6.x" }
